corpus/literals.txt
================================================================================
Integer literals
================================================================================
0
42

--------------------------------------------------------------------------------

(source_file
  (record
    (integer))
  (record
    (integer)))

================================================================================
Float literals
================================================================================
0.0
42.84
128.0

--------------------------------------------------------------------------------

(source_file
  (record
    (float))
  (record
    (float))
  (record
    (float)))

================================================================================
Hex literals
================================================================================
0xAF
0Xb9

--------------------------------------------------------------------------------

(source_file
  (record
    (hex))
  (record
    (hex)))

================================================================================
NA literals
================================================================================
na
NA

--------------------------------------------------------------------------------

(source_file
  (record
    (na))
  (record
    (na)))


================================================================================
Null literals
================================================================================
null
NULL

--------------------------------------------------------------------------------

(source_file
  (record
    (null))
  (record
    (null)))

================================================================================
Boolean literals
================================================================================
true,TRUE
false,FALSE

--------------------------------------------------------------------------------

(source_file
  (record
    (boolean)
    (delimiter)
    (boolean))
  (record
      (boolean)
      (delimiter)
      (boolean)))



================================================================================
String literals
================================================================================
"foo",""
bar,qux
"ABC",XYZ

--------------------------------------------------------------------------------

(source_file
  (record
    (string
      (quote)
      (quoted_content
        (text))
      (quote))
    (delimiter)
    (string
      (quote)
      (quote)))
  (record
    (string
      (unquoted_content))
    (delimiter)
    (string
      (unquoted_content)))
  (record
    (string
      (quote)
      (quoted_content
        (text))
      (quote))
    (delimiter)
    (string
      (unquoted_content))))



================================================================================
Quoted string literals with escape sequences
================================================================================
"The bat\twith a hat is a ""cat"" with a hat."

--------------------------------------------------------------------------------

(source_file
  (record
    (string
      (quote)
      (quoted_content
        (text)
        (escape_sequence)
        (text)
        (escape_sequence)
        (text)
        (escape_sequence)
        (text)))))
