test/corpus/literals.txt
================================================================================
Integer literals
================================================================================
0
42
-107

--------------------------------------------------------------------------------

(source_file
  (record
    (integer))
  (record
    (integer))
  (record
    (integer)))

================================================================================
Float literals
================================================================================
0.0
42.84
-128.0

--------------------------------------------------------------------------------

(source_file
  (record
    (float))
  (record
    (float))
  (record
    (float)))

================================================================================
Hex literals
================================================================================
0xAF
0Xb9

--------------------------------------------------------------------------------

(source_file
  (record
    (hex))
  (record
    (hex)))

================================================================================
NA literals
================================================================================
na
NA

--------------------------------------------------------------------------------

(source_file
  (record
    (na))
  (record
    (na)))


================================================================================
Null literals
================================================================================
null
NULL

--------------------------------------------------------------------------------

(source_file
  (record
    (null))
  (record
    (null)))

================================================================================
Boolean literals
================================================================================
true,TRUE
false,FALSE

--------------------------------------------------------------------------------

(source_file
  (record
    (boolean)
    (delimiter)
    (boolean))
  (record
      (boolean)
      (delimiter)
      (boolean)))



================================================================================
String literals
================================================================================
"foo",""
bar,qux
"ABC",XYZ

--------------------------------------------------------------------------------

(source_file
  (record
    (string
      (quote)
      (escaped
        (text))
      (quote))
    (delimiter)
    (string
      (quote)
      (quote)))
  (record
    (string
      (non_escaped))
    (delimiter)
    (string
      (non_escaped)))
  (record
    (string
      (quote)
      (escaped
        (text))
      (quote))
    (delimiter)
    (string
      (non_escaped))))



================================================================================
Quoted string literals with escape sequences
================================================================================
"abc ""ooo"" xyz"

--------------------------------------------------------------------------------

(source_file
  (record
    (string
      (quote)
      (escaped
        (text)
        (escape_sequence)
        (text)
        (escape_sequence)
        (text))
      (quote))))
