test/corpus/records.txt
================================================================================
Single record
================================================================================
1,abc,"Lorem ipsum"

--------------------------------------------------------------------------------

(source_file
  (record
    (integer)
    (delimiter)
    (string
      (non_escaped))
    (delimiter)
    (string
      (quote)
      (escaped
        (text))
      (quote))))

===============================================================================
Multiple records
================================================================================
id,name,is_planet
1,"Mercury",true
2,"Venus",true
9,"Pluto",false

--------------------------------------------------------------------------------

(source_file
  (record
    (string (non_escaped))
    (delimiter)
    (string (non_escaped))
    (delimiter)
    (string (non_escaped)))
  (record
    (integer)
    (delimiter)
    (string
      (quote)
      (escaped (text))
      (quote))
    (delimiter)
    (boolean))
  (record
    (integer)
    (delimiter)
    (string
      (quote)
      (escaped (text))
      (quote))
    (delimiter)
    (boolean))
  (record
    (integer)
    (delimiter)
    (string
      (quote)
      (escaped (text))
      (quote))
    (delimiter)
    (boolean)))

================================================================================
Empty quoted field
================================================================================
a,"",b

--------------------------------------------------------------------------------

(source_file
  (record
    (string (non_escaped))
    (delimiter)
    (string
      (quote)
      (quote))
    (delimiter)
    (string (non_escaped))))

================================================================================
First empty quoted field
================================================================================
"",a

--------------------------------------------------------------------------------

(source_file
  (record
    (string
      (quote)
      (quote))
    (delimiter)
    (string (non_escaped))))

================================================================================
Last empty quoted field
================================================================================
a,""

--------------------------------------------------------------------------------

(source_file
  (record
    (string (non_escaped))
    (delimiter)
    (string
      (quote)
      (quote))))

================================================================================
Empty field
================================================================================
a,,b

--------------------------------------------------------------------------------

(source_file
  (record
    (string (non_escaped))
    (delimiter)
    (delimiter)
    (string (non_escaped))))

================================================================================
First empty field
================================================================================
,a

--------------------------------------------------------------------------------

(source_file
  (record
    (delimiter)
    (string (non_escaped))))

================================================================================
Last empty field
================================================================================
a,

--------------------------------------------------------------------------------

(source_file
  (record
    (string (non_escaped))
    (delimiter)))
